Add SidecarServer sources, stubs, and CI/pom wiring.
Follow-up: the previous commit only included the shaded JAR after a pathspec add failure; this adds the HTTP server, Apigee API stubs, pool shutdown, tests, and build gates.
Co-authored-by: Cursor <cursoragent@cursor.com>